[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.15.0"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^2.0.10"
factory-boy = "^3.2.0"
gunicorn = "^20.1.0"
requests = "^2.26.0"
cryptography = "^3.4.8"
SQLAlchemy-Utils = "^0.40.0"
pillow = "^9.5.0"
httpx = "^0.24.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
autopep8 = "^1.5.7"
pytest-mock = "^3.6.1"
bandit = "^1.7.5"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
